--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
+    "safe-pipe": "^1.0.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
