--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/isotope-layout/dist/isotope.pkgd.min.js"
+              "node_modules/isotope-layout/dist/isotope.pkgd.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
