--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "hammerjs": "^2.0.8",
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
+    "jquery": "^3.5.1",
     "localstorage-polyfill": "^1.0.1",
     "masonry-layout": "^4.2.2",
     "mousetrap": "^1.6.5",
