--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
     "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^12.0.1",
     "node-sass": "^4.13.1",
+    "number-to-words": "^1.2.4",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "safe-pipe": "^1.0.3",
+    "to-words": "^2.3.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
